refactor: Use new db client in quest endpoints
